--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
-spring.datasource.password=@Senhaaa3
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
